Fix layout on firefox

--- a/django_project/frontend/src/app/app.scss
+++ b/django_project/frontend/src/app/app.scss
@@ -5,11 +5,12 @@
 @import './variables.scss';
 
 .page {
-  height: 100vh;
   display: grid;
   grid-template-rows: max-content auto;
-  grid-template-columns: auto;
+  grid-template-columns: 100%;
+  height: 100vh;
   overflow: hidden;
+  width: 100%;
 
   @include media(xsmall-only) {
     min-height: 100vh;
