--- a/django_project/frontend/src/components/Dashboard/LeftPanel/style.scss
+++ b/django_project/frontend/src/components/Dashboard/LeftPanel/style.scss
@@ -88,7 +88,6 @@
     display: flex;
     flex-direction: column;
     overflow: hidden;
-    border-bottom-right-radius: 5px;
 
     .reference-dataset {
       &.Mui-expanded {
