--- a/django_project/frontend/src/components/Dashboard/RightPanel/style.scss
+++ b/django_project/frontend/src/components/Dashboard/RightPanel/style.scss
@@ -29,7 +29,6 @@
   }
 
   .dashboard__content-wrapper {
-    border-bottom-left-radius: 5px;
     max-height: 100%;
     overflow-y: auto;
     min-height: 3rem;
