--- a/django_project/frontend/src/pages/Dashboard/style.scss
+++ b/django_project/frontend/src/pages/Dashboard/style.scss
@@ -25,8 +25,6 @@ html, body {
   .dashboard__panel {
     box-sizing: border-box;
     height: 100%;
-    padding-bottom: 5px;
-    padding-top: 5px;
     pointer-events: none;
     z-index: 1001;
 
